# eirbmails_sender

./: .env.example  README.md  credentials.example.txt  main.py  pyproject.toml
